<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="26dp"
        android:text="@string/login_screen"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_fill_in_the_information_below"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:paddingBottom="16dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="text"
                android:background="@drawable/edittext_border"
                android:padding="8dp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:background="@drawable/edittext_border"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/baseline_visibility_24"
                android:drawablePadding="8dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/custom_signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:onClick="gotoMain"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/not_registered_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered_yet"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/sign_up_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/blue"
                    android:onClick="gotoSignUP"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
