<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/register_screen"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_fill_in_the_information_below"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/full_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_border"
                android:hint="Full Name"
                android:inputType="text"
                android:padding="8dp"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue" />

                <RadioGroup
                    android:id="@+id/radio_group_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_button_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/radio_button_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:textColor="@color/black" />
                </RadioGroup>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Year of Birth"
                android:padding="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/blue" />

            <Spinner
                android:id="@+id/year_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

            <EditText
                android:id="@+id/username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_border"
                android:hint="Username"
                android:inputType="text"
                android:padding="8dp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_border"
                android:drawableEnd="@drawable/baseline_visibility_off_24"
                android:drawablePadding="8dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="8dp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/re_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_border"
                android:drawableEnd="@drawable/baseline_visibility_off_24"
                android:drawablePadding="8dp"
                android:hint="Re Password"
                android:inputType="textPassword"
                android:padding="8dp"
                tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/custom_signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:onClick="register"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/custom_clear_form_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="clear"
                android:background="@drawable/button_background_danger"
                android:text="@string/clear_form"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/custom_go_back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="gotoLogin"
                android:background="@drawable/button_background"
                android:text="Go Back"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
